--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vuepress-theme-vuetify",
-  "version": "1.0.0",
+  "version": "0.0.2",
   "description": "Vuepress docs theme using vuetify",
   "main": "index.js",
   "files": [
@@ -32,11 +32,11 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@mdi/font": "^4.7.95",
     "flexsearch": "^0.6.32",
     "node-sass": "^4.13.0",
     "sass-loader": "^8.0.0",
     "vuepress": "^1.1.0",
-    "vuetify": "^2.1.15",
-    "@mdi/font": "^4.7.95"
+    "vuetify": "^2.1.15"
   }
 }
